# design-pattern

./: LICENSE  README.md
abstract_factory/: Cargo.toml
abstract_factory/src/: lib.rs
abstract_factory/tests/: abstract_test.rs
adapter/: Cargo.toml
adapter/src/: inside_order.rs  lib.rs  pop_order.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
bridge/tests/: ali.rs  wechat.rs
builder/: Cargo.toml
builder/src/: decoration_package.rs  lib.rs
builder/tests/: builder_test.rs
chain/: Cargo.toml
chain/src/: auth_info.rs  auth_link.rs  auth_service.rs  lib.rs
command/: Cargo.toml
command/src/: lib.rs  waiter.rs
composite/: Cargo.toml
composite/src/: lib.rs
composite/tests/: decision.rs
decorator/: Cargo.toml
decorator/src/: decorators.rs  interceptors.rs  lib.rs
facade/: Cargo.toml
facade/src/: lib.rs
factory/: Cargo.toml
factory/src/: lib.rs
factory/tests/: card_test.rs  coupon_test.rs  goods_test.rs
flyweight/: Cargo.toml
flyweight/src/: activity.rs  lib.rs  simulator.rs  stock.rs
iterator/: Cargo.toml
iterator/src/: group.rs  lib.rs
mediator/: Cargo.toml
mediator/resources/: Config.xml  mybatis-config-datasource.xml
memento/: Cargo.toml
observer/: Cargo.toml
prototype/: Cargo.toml
proxy/: Cargo.toml
proxy/src/: lib.rs
singleton/: Cargo.toml
singleton/src/: by_atomic.rs  by_hand.rs  by_lazy.rs  by_once.rs  by_option.rs  lib.rs
state/: Cargo.toml
strategy/: Cargo.toml
template/: Cargo.toml
template/src/: client.rs  lib.rs
template/src/mall/: dangdang.rs  jd.rs  mod.rs  taobao.rs
visitor/: Cargo.toml
(+112 files in other folders)
