# see https://stackoverflow.com/questions/27791532/how-do-i-create-a-global-mutable-singleton
[package]
name = "singleton"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.3.1"