[package]
name = "template"
version = "0.1.0"
authors = ["Forsworns <378974295@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
regex = "1.4.3"
reqwest = "0.11.0"
futures = "0.3.12"
tokio = { version = "1.1.1", features = ["full"] }